# reactorcide

./: .dockerignore  .env.local  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Design.md  Dockerfile  Dockerfile.coordinator.dev  Dockerfile.web.dev  Dockerfile.worker.dev  README.md  config.example.yaml  config.test.yaml  coordinator_api_tasks.md  create-api-token.sh  deploy-to-host.sh  deploy-vm.job.example.yaml  deploy-vm.secrets.example  deploy-with-reactorcide.sh  deploy.config.example  deployment-plan.md  dev-on-vm.md  docker-compose.yml  emulate-worker-vm-deploy.md  skaffold.yaml  test_job_submission.sh  tools  values-skaffold-local.yaml  values-skaffold-local.yaml.example
runnerlib/: .dockerignore  DESIGN.md  Dockerfile.runner  README.md  __init__.py  pyproject.toml  test-job.json  test-job.yaml  test-job2.json  test-secrets.env
runnerlib/docs/: design.md  plugin_development.md  usage.md
runnerlib/src/: __init__.py  cli.py  config.py  container.py  container_validation.py  eval.py  git_ops.py  logging.py  plugins.py  register_secret.py  secrets.py  secrets_local.py  secrets_resolver.py  secrets_server.py  signals.py  source_prep.py  validation.py  workflow.py
runnerlib/tests/: conftest.py  test_config.py  test_container_advanced.py  test_container_isolation.py  test_container_validation.py  test_directory_operations.py  test_docker_execution.py  test_dynamic_secret_masking.py  test_dynamic_secrets.py  test_eval.py  test_eval_cli.py  test_git_operations.py  test_git_ops.py  test_integration.py  test_job_isolation.py  test_plugins.py  test_register_secret.py  (+8 more)
(+435 files in other folders)
