[project]
name = "runnerlib"
version = "0.1.0"
description = "Reactorcide job runner library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.3",
    "GitPython>=3.1.40",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
runnerlib = "runnerlib.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
