[project]
name = "runnerlib"
version = "0.1.0"
description = "Reactorcide job runner library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.3",
    "GitPython>=3.1.40",
    "pyyaml>=6.0.2",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
]

[project.scripts]
runnerlib = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    "pytest-cov>=7.0.0",
]
